# g2-pcfs-ML

./: README.md  conda.yml  setup.cfg
data/: data_grid_params.xlsx  wiener_data_grid_params.xlsx
data/fit_params/: diffusion_params.csv  diffusion_params.xls  diffusion_params_CK174_dot6.xls  diffusion_params_CdSe_dot7.xls  diffusion_params_dotC.xls  diffusion_params_dotH_8uW.xls  full_params.xls  spectrum_params_CK174_dot6.xls  spectrum_params_CdSe.xls  spectrum_params_CsPbBr3.xls  spectrum_params_dotC.xls  spectrum_params_dotH_8uW.xls  stored_results.xlsx  wiener_diffusion_params.csv
data/raw/: make_devset.py  make_devset_2d.py
dots/: CK174_dot6_updated.pickle  dot4_zwitTPPO_2uW_20210819.pickle  dot7_75pos_20mm_1uW.pickle
g2_pcfs/: __init__.py  predict.py
g2_pcfs/models/: __init__.py  base.py  utils.py
g2_pcfs/models/tests/: __init__.py  test_autoencoder.py  test_conv.py  test_downsample.py
g2_pcfs/modules/: MLE_MAP.py  PCFS.py  SimulatedPCFS.py  conversions.py  error_stats.py  g2_funks.py  photons.py
g2_pcfs/pipeline/: __init__.py  data.py  image_data.py  make_dataset.py  transforms.py
g2_pcfs/pipeline/tests/: __init__.py  test_data_generation.py  test_data_module.py
g2_pcfs/visualization/: AP_figs_funcs.py  visualize.py
scripts/: pcfs_reconstructions_dot.py  train_PyCharm.py
scripts/ManuscriptFigures/: Figure2.py  Figure3.py  Figure4.py
