[metadata]
name = g2_pcfs
version = 0.1.0

[options]
packages=find:
install_requires= 
        black
        ruamel.yaml
        pytorch_lightning==1.6.3
        setuptools==59.5.0
        pandas
        scikit-image
        openpyxl
        seaborn
        numba
        torch
        torchvision
	torchdyn

